services/ni/inicio/staging/03-ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-ws
  namespace: inicio-staging
spec:
  stripPrefix:
    prefixes:
      - /ws
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: inicio-staging-https
  namespace: inicio-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`inicio-staging.niaefeup.pt`) && PathPrefix(`/ws`)
      kind: Rule
      services:
        - name: inicio-ws-service
          port: 80
      middlewares:
        - name: strip-ws

    - match: Host(`inicio-staging.niaefeup.pt`)
      kind: Rule
      services:
        - name: inicio-service
          port: 80

  tls:
    secretName: inicio-staging-cert
